--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "homepage": "http://lynnjamin.github.io/caverna-simulator",
   "private": true,
   "dependencies": {
+    "boardgame.io": "^0.33.2",
     "react": "^16.9.0",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.3",
+    "redux-devtools": "^3.5.0"
   }
 }
